log/build_2025-05-10_16-42-28/cpp_pubsub/stdout.log

[0/2] Building CXX object CMakeFiles/station.dir/src/station.cpp.o[K
[1/2] Building CXX object CMakeFiles/station.dir/src/station.cpp.o[K
[31mFAILED: [0mCMakeFiles/station.dir/src/station.cpp.o 
/usr/bin/c++ -DDEFAULT_RMW_IMPLEMENTATION=rmw_fastrtps_cpp -DFASTCDR_DYN_LINK -isystem /opt/ros/jazzy/include/rclcpp -isystem /opt/ros/jazzy/include/example_interfaces -isystem /opt/ros/jazzy/include/builtin_interfaces -isystem /opt/ros/jazzy/include/rosidl_runtime_c -isystem /opt/ros/jazzy/include/rcutils -isystem /opt/ros/jazzy/include/rosidl_typesupport_interface -isystem /opt/ros/jazzy/include/fastcdr -isystem /opt/ros/jazzy/include/rosidl_runtime_cpp -isystem /opt/ros/jazzy/include/rosidl_typesupport_fastrtps_cpp -isystem /opt/ros/jazzy/include/rmw -isystem /opt/ros/jazzy/include/rosidl_dynamic_typesupport -isystem /opt/ros/jazzy/include/rosidl_typesupport_fastrtps_c -isystem /opt/ros/jazzy/include/rosidl_typesupport_introspection_c -isystem /opt/ros/jazzy/include/rosidl_typesupport_introspection_cpp -isystem /opt/ros/jazzy/include/libstatistics_collector -isystem /opt/ros/jazzy/include/rcl -isystem /opt/ros/jazzy/include/rcl_interfaces -isystem /opt/ros/jazzy/include/service_msgs -isystem /opt/ros/jazzy/include/rcl_logging_interface -isystem /opt/ros/jazzy/include/rcl_yaml_param_parser -isystem /opt/ros/jazzy/include/type_description_interfaces -isystem /opt/ros/jazzy/include/rcpputils -isystem /opt/ros/jazzy/include/statistics_msgs -isystem /opt/ros/jazzy/include/rosgraph_msgs -isystem /opt/ros/jazzy/include/rosidl_typesupport_cpp -isystem /opt/ros/jazzy/include/rosidl_typesupport_c -isystem /opt/ros/jazzy/include/tracetools -isystem /opt/ros/jazzy/include/action_msgs -isystem /opt/ros/jazzy/include/unique_identifier_msgs -Wall -Wextra -Wpedantic -MD -MT CMakeFiles/station.dir/src/station.cpp.o -MF CMakeFiles/station.dir/src/station.cpp.o.d -o CMakeFiles/station.dir/src/station.cpp.o -c /home/joel-jebitto/ROS_workspace/src/cpp_pubsub/src/station.cpp
/home/joel-jebitto/ROS_workspace/src/cpp_pubsub/src/station.cpp:24:5: error: ‘rclcpp’ does not name a type
   24 |     rclcpp:rclcpp::TimerBase::SharedPtr timer_;
      |     ^~~~~~
/home/joel-jebitto/ROS_workspace/src/cpp_pubsub/src/station.cpp: In constructor ‘RobotNewsStationNode::RobotNewsStationNode()’:
/home/joel-jebitto/ROS_workspace/src/cpp_pubsub/src/station.cpp:14:9: error: ‘timer_’ was not declared in this scope; did you mean ‘timer_t’?
   14 |         timer_ = this->create_wall_timer(0.5s,std::bind(&RobotNewsStationNode, this));
      |         ^~~~~~
      |         timer_t
/home/joel-jebitto/ROS_workspace/src/cpp_pubsub/src/station.cpp:14:78: error: expected primary-expression before ‘,’ token
   14 |         timer_ = this->create_wall_timer(0.5s,std::bind(&RobotNewsStationNode, this));
      |                                                                              ^
ninja: build stopped: subcommand failed.
